.provarCaches/00D410000011HE0EAM/objects/DOX__Heroku_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Heroku connection configuration</description>
    <fields>
        <fullName>DOX__app_name__c</fullName>
        <description>App_name represents the Connected APP name for query</description>
        <label>app_name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__base_url__c</fullName>
        <description>base_URL formulates the target URL to DOX application on WEB server</description>
        <label>base_url</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DOX__client_key__c</fullName>
        <description>CLIENT_KEY for the connected app</description>
        <label>client_key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__client_secret__c</fullName>
        <description>CLIENT_SECRET for connnected app</description>
        <label>client_secret</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__org_name__c</fullName>
        <description>This Org Name value to be used across Heroku and will be used as a schema name as well on Postgres DB.</description>
        <label>org_name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__private_key__c</fullName>
        <description>PRIVATE_KEY of AES128 encode</description>
        <label>private_key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__redirect_url__c</fullName>
        <description>REDIRECT URL is a callback URL for Connected app</description>
        <label>redirect_url</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Heroku Configuration</label>
</CustomObject>